# artifact_cleaner

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  bacon.toml  cliff.toml  release.sh
.github/workflows/: release.yml  test.yml
src/: cleaning.rs  lib.rs  main.rs
