[package]
name = "artifact_cleaner"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
directories = "5.0.1"
serde = {version = "1.0.196", features = ["derive"]}
toml = "0.8.10"

[dev-dependencies]
rstest = "0.18.2"
tempfile = "3"
